add link register

--- a/templates/base.html
+++ b/templates/base.html
@@ -256,6 +256,7 @@
                     {% endwith %}
                 </li>
             {% endfor %}
+            <li><a target="_blank" href="https://dangky.tinhoctre.vn" class="nav-home">ĐĂNG KÝ VÒNG SƠ KHẢO</a></li>
         </ul>
 
         <span id="user-links">
